--- a/css/base.css
+++ b/css/base.css
@@ -15,12 +15,9 @@ html {
 
 body {
 	height: 100%;
-	--color-text: #fff;
-	--color-bg: #000;
-	--color-link: #697c7e;
-	--color-link-hover: #fff;
+	
 	color: var(--color-text);
-	background-color: var(--color-bg);
+	
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	-webkit-font-smoothing: antialiased;
@@ -80,7 +77,7 @@ a:focus {
 	flex-direction: column;
 	position: relative;
 	z-index: 1;
-	will-change: opacity;
+	will-change: width;
 	opacity: 0;
 }
 
@@ -93,8 +90,19 @@ a:focus {
 }
 
 .desk {
-	z-index: 0;
+	z-index: -1;
 	width: 100%;
+	will-change: width;
+	min-width: 100%;
+	position: absolute;
+}
+
+.doorway {
+	z-index: -1;
+	width: 100%;
+	will-change: width;
+	min-width: 100%;
+	position: absolute;
 }
 
 
