--- a/css/base.css
+++ b/css/base.css
@@ -116,9 +116,17 @@ canvas {
 	
 }
 
-.circle {
-	z-index: 3;
+.webpage {
+	z-index: 40;
+	width: 10%;
 	position: fixed;
+	
+}
+
+.circle {
+	z-index: 30;
+	
+	position: relative;
 	width: 10px;
 }
 
