--- a/css/base.css
+++ b/css/base.css
@@ -87,7 +87,6 @@ canvas {
 }
 
 .header {
-	
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -99,9 +98,11 @@ canvas {
 
 .logo {
 	z-index: 5;
-	width: 30%;
+	width: 25%;
 	position: absolute;
 	top: 5%;
+	animation: bounce 10s infinite;
+
 }
 
 
@@ -143,14 +144,13 @@ canvas {
 }
 
 /* logoFinder */
-.page1 { 
+.logoFinder { 
 	z-index: 5;
 	width: 0%;
 	position: fixed;
 	padding-left: 15%;
 	padding-bottom: 15px;
 	max-width:40%;
-	
 }
 
 .page1Logos { 
