--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,7 @@
 
 html {
 	height: 100%;
+	cursor: url('src/cursor.svg'), auto;
 }
 
 #pixels {
@@ -35,7 +36,7 @@ body {
          url('fonts/mazzardh-bold-webfont.woff2') format('woff2'),
          url('fonts/mazzardh-bold-webfont.woff') format('woff'),
          url('fonts/mazzardh-bold-webfont.svg#mazzardh_bold') format('svg');
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 
 }
@@ -111,8 +112,6 @@ canvas {
 	animation: rotateStars 5s infinite;
 }
 
-
-
 @keyframes rotateStars {
 	0%, 100% {
 		transform: translateY(0);
@@ -180,7 +179,6 @@ canvas {
 	min-width: 100%;
 	transform: translateY(10%);
 	position: fixed;
-	
 }
 
 
@@ -194,13 +192,13 @@ canvas {
 .spinny { 
 	position: fixed;
 	transform: translateY(-100%);
-	/* max-width: 500%; */
 	z-index: 10;
 	width: 5%;
-	opacity: 0%;
+	opacity: 0;
 }
 
 .on { 
+	cursor: url('src/cursor.svg'), auto;		
 	position: fixed;
 	max-width: 970%;
 	z-index: 8;
@@ -208,64 +206,87 @@ canvas {
 	opacity:0;
 }
 
+
 .toolbar {
-	
-	position: fixed;
-	transform: translateY(-26%) translateX(-0.5%);
-	max-width: 97%;
-	z-index: 8;
-	width: 97%;
-	height: 90%;
-	opacity:0;
-
-	text-align: left;
-
-}
-
-.dock {
 	position: fixed;
 	top: 0%;
 	left: 0%;
 	z-index: 13;
 	width: 100%;
-	background-color: #2E345B;
-	height: 50px;
-	opacity:0;
-
-}
-nav {    
-    display: block;
-	text-align: left;
-	
+	background-color: #2e345b;
+	height: 45px;
+	opacity: 1;
   }
 
-nav ul { 
-  margin: 0;
-  padding:0;
-  list-style: none;
-  display:block; 
-  color:#e8e8e8;
-  padding-right: 15px;
-}
+  .toolLeft {
+	  float: left;
+  }
 
-.nav li{padding-left: 15px;}
-.nav > li {float:left; } 
-   
-.nav ul {
-  position: absolute;
-  white-space: nowrap;
-  z-index: 1;
-  left: -99999em;
-  background-color: #2c2c2c;
-}
-.nav > li:hover > ul {
-  left: auto;
-}
+  .toolRight {
+	  float: right;
+	  padding-right: 25px;
+	  padding-top: 15px;
 
-.nav > li li:hover > ul { 
-  left: 100%;
-  top: 0px;
-}
+  }
+  nav {
+	display: block;
+	text-align: left;
+	opacity: 1;
+	font-size: 14px;
+	transform: translateY(-20px);
+	
+  }
+  
+  /* first submenu settings */
+  nav ul {
+	list-style: none;
+	left: 0;
+	padding-left: 15px;
+	color: #e8e8e8;
+	
+  }
+  
+  /* main menu options */
+  .nav > li {
+	float: left;
+	padding-left: 5px;
+	padding-right: 10px;
+  }
+  
+  /* sub menu */
+  .nav ul {
+	position: absolute;
+	white-space: nowrap;
+	left: -99999em;
+	background-color: rgba(44, 44, 44, 0.75);
+	padding-right: 20px;
+	padding-left: 25px;
+	transform: translateX(-20px) translateY(-4px);
+	line-height: 10px;
+	border: thin red;
+  }
+  
+  /* sub sub menu */
+  .nav ul ul {
+	transform: translateY(-47px);
+	position: absolute;
+	background-color: rgba(44, 44, 44, 0.6);
+  }
+  
+  /* sub sub menu hover */
+  .nav > li:hover > ul {
+	left: auto;
+	top: relative;
+  }
+  
+  .nav > li li:hover > ul {
+	left: 100%;
+  }
+
+  .bold {
+	  font-family: "mazzardBold";
+  }
+  
 
 
 
