--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,7 @@
 html {
 	height: 100%;
 	cursor: url('src/cursor.svg'), auto;
+	overflow-x: hidden;
 }
 
 #pixels {
@@ -81,12 +82,12 @@ canvas {
 	position: fixed;
 	bottom: 0;
 	left: 0;
-	z-index: 12;
+	z-index: 25;
   }
   
   .progress-bar {
 	height: 8px;
-	background: #394172;
+	background: #2e345b;
 	width: 0%;
   }
 
@@ -158,7 +159,7 @@ canvas {
 .social {
 	z-index: 12;
 	display: flex;
-	transform: translateY(-200%);
+	transform: translateY(2000px);
 	justify-items: center;
 }
 
@@ -193,7 +194,7 @@ canvas {
 	position: fixed;
 	transform: translateY(-100%);
 	z-index: 10;
-	width: 5%;
+	width: 3%;
 	opacity: 0;
 }
 
@@ -206,6 +207,52 @@ canvas {
 	opacity:0;
 }
 
+.wallpaper {
+	z-index: 10;
+	height: 100%;
+	position: fixed;
+	opacity: 0;
+	animation: rotateStars 20s infinite;
+}
+
+
+
+.dock {
+	position: fixed; 
+	bottom: 0%;
+	width: 80%;
+	height: 160px;
+	z-index: 13;
+	background: linear-gradient(180deg, #00000000 50%, #2e345b 50%);
+	padding-left: 20px;
+	padding-right: 20px;
+	overflow: hidden;
+	display: flex;
+	margin-top: 40px;
+	justify-content: space-between;
+	border-radius: 5px;
+	vertical-align: bottom;
+	opacity: 0;
+}
+
+
+
+.dockIcons {
+	height: 60px;
+	padding-top: 90px;
+	padding-right: 22px;
+	object-position: center;
+	z-index: 19;
+	
+
+	
+}
+
+.dockBounce:hover {
+	animation: bounce 2s infinite;
+	
+}
+
 
 .toolbar {
 	position: fixed;
@@ -214,6 +261,7 @@ canvas {
 	z-index: 13;
 	width: 100%;
 	background-color: #2e345b;
+	
 	height: 45px;
 	opacity: 1;
   }
@@ -228,6 +276,7 @@ canvas {
 	  padding-top: 15px;
 
   }
+
   nav {
 	display: block;
 	text-align: left;
@@ -243,6 +292,7 @@ canvas {
 	left: 0;
 	padding-left: 15px;
 	color: #e8e8e8;
+	border: solid rgba(44, 44, 44, 0.3) 2px;
 	
   }
   
@@ -268,19 +318,20 @@ canvas {
 	position: absolute;
 	white-space: nowrap;
 	left: -99999em;
-	background-color: rgba(44, 44, 44, 0.75);
+	background-color: rgba(47, 53, 89, 0.75);
 	padding-right: 20px;
 	padding-left: 20px;
-	transform: translateX(-20px) translateY(-4px);
+	transform: translateX(-20px) translateY(-5px);
 	line-height: 10px;
 	
   }
   
   /* sub sub menu */
   .nav ul ul {
-	transform: translateY(-47px);
+	transform: translateY(-48px);
 	position: absolute;
-	background-color: rgba(44, 44, 44, 0.6);
+	background-color: rgba(47, 53, 89, 0.70);
+	border: solid rgba(44, 44, 44, 0.3) 2px;
   }
   
   /* sub sub menu hover */
@@ -416,6 +467,10 @@ canvas {
 
 	#toolIcons {
 		display: none;
+	}
+
+	.spinny { 
+		width: 30px;
 	}
 	
 }
