--- a/webglTranslation/index1.css
+++ b/webglTranslation/index1.css
@@ -3,7 +3,32 @@ body {
     overflow-y: scroll;
 	padding: 0;
 	margin: 0;
-  
+	font-family: "mazzardBold", "mazzardLight", sans-serif;
+	
+}
+
+@font-face {
+    font-family: 'mazzardBold';
+    src: url('../fonts/mazzardh-bold-webfont.eot');
+    src: url('../fonts/mazzardh-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/mazzardh-bold-webfont.woff2') format('woff2'),
+         url('../fonts/mazzardh-bold-webfont.woff') format('woff'),
+         url('../fonts/mazzardh-bold-webfont.svg#mazzardh_bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'mazzardLight';
+    src: url('../fonts/mazzardh-extralight-webfont.eot');
+    src: url('../fonts/mazzardh-extralight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/mazzardh-extralight-webfont.woff2') format('woff2'),
+         url('../fonts/mazzardh-extralight-webfont.woff') format('woff'),
+         url('../fonts/mazzardh-extralight-webfont.svg#mazzardh_extralight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 #viewport {
@@ -86,7 +111,53 @@ body {
 	padding-right: 10px;
 	width: 60px;
 	bottom: 0;
+
 }
+
+#spinnyBox { 
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-top: 50vh;
+}
+
+.spinny {
+	position: fixed;
+	z-index: 7;
+	max-width: 40px;
+	opacity: 0;
+}
+
+.wallpaper {
+	z-index: 9;
+	height: 100%;
+	top: 0;
+	position: fixed;
+	opacity: 0;
+	
+}
+
+#profileBox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.profile { 
+	position: fixed;
+	opacity: 0;
+	width: 100px;
+	z-index: 9;
+}
+
+h1 {
+	width: 300px;
+	padding-left: 40px;
+	color: white;
+}
+	
+
 /* 
 .social {
 	height: 30px;
