--- a/webglTranslation/index1.css
+++ b/webglTranslation/index1.css
@@ -138,23 +138,73 @@ body {
 	
 }
 
-#profileBox {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 
-.profile { 
-	position: fixed;
-	opacity: 0;
-	width: 100px;
-	z-index: 9;
-}
 
 h1 {
 	width: 300px;
 	padding-left: 40px;
 	color: white;
+}
+
+#text1 {
+	padding-top: 2000px;
+}
+
+.moto { 
+	position: fixed;
+	opacity: 0;
+	top: 0;
+	width: 100%;
+	align-self: center;
+	z-index: 10;
+}
+
+.on { 
+		
+	position: fixed;
+	max-width: 970%;
+	z-index: 11;
+	height: 150%;
+	opacity:0;
+	top: 0;
+}
+
+.wallpaper {
+	z-index: 12;
+	height: 100%;
+	position: fixed;
+	opacity: 0;
+	top: 0;
+}
+
+.dock {
+	position: fixed; 
+	bottom: 9px;
+	width: 80%;
+	height: 160px;
+	z-index: 303;
+	background: linear-gradient(180deg, #00000000 50%, #2e345b 50%);
+	padding-left: 20px;
+	padding-right: 200px;
+	overflow: hidden;
+	display: flex;
+	margin-top: 40px;
+	justify-content: space-between;
+	border-radius: 5px;
+	vertical-align: bottom;
+	opacity: 0;
+	max-width: 1000px;
+}
+
+.dockIcons {
+	height: 60px;
+	padding-top: 90px;
+	padding-right: 22px;
+	object-position: center;
+	z-index: 19;
+	opacity: 1;
+
+	
 }
 	
 
